<resources>
    <string name="app_name"> TYBAR TCV </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> SAVE FORM </string>
    <string name="nextSection"> اگلا سیکشن </string>
    <string name="addMember"> افراد کا اندراج </string>
    <string name="dcstatus">انٹروہو کا نتیجہ</string>
    <string name="complete"> مکمل</string>
    <string name="incomplete">نا مکمل</string>
    <string name="secALabel">A: BASIC INFORMATION</string>
    <string name="secBLabel">B: HOUSEHOLD MEMBERS’ INFORMATION </string>
    <string name="secCLabel">C: گھر جي سماجي ۽ اقتصادي معلومات </string>
    <string name="secDLabel">D: REPRODUCTIVE HEALTH, MATERNAL AND CHILD MORTALITY (Complete this section  for all married aged 15–49 years in the household)</string>
    <string name="secELabel">E: Deceased Mother Information</string>
    <string name="secFLabel">F: Deceased Child Information</string>
    <string name="secGLabel">G: Access to LHWs </string>
    <string name="secHALabel">(HA: ٻار جي صحت(دستن جي بيماري جي باري ۾</string>
    <string name="secHBLabel">HB: ٻار جي صحت(ساھ کڻڻ ۾ تڪليف)</string>
    <string name="secILabel">I: حفاظتي ٽڪن جي معلومات</string>
    <string name="secJLabel">J: BREAST FEEDING AND NUTRITION </string>
    <string name="secKLabel">K: پاڻي ۽ صفائي</string>
    <string name="secLLabel">L: ھٿ ڌوئڻ</string>
    <string name="secMLabel">M: WASH (Spot Check) </string>
    <string name="istatus"> OUTCOME OF INTERVIEW </string>
    <string name="istatusa"> مکمل </string>
    <string name="istatusb"> نا مکمل </string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="other">Other</string>
    <string name="dkn">Don\'t Know</string>
    <string name="uyes"> ہاں </string>
    <string name="uno"> نہیں </string>
    <string name="uother"> کوئی اور وضاحت کریں </string>
    <string name="uotherx"> کوئی اور وضاحت کریں</string>
    <string name="uotherxh">وضاحت کریں </string>
    <string name="udnt"> معلوم نہیں </string>
    <string name="unone"> کبھی نہیں </string>
    <string name="tcvscanum"> number </string>
    <string name="resistance"> Resistance </string>
    <string name="sensitive"> Sensitive </string>
    <string name="na"> N/A </string>
    <string name="sec_slisting">SCHOOL LISTING</string>
    <string name="tcvsl00"> School Type </string>
    <string name="tcvsl01"> School Name </string>
    <string name="tcvsl02"> Type of School </string>
    <string name="tcvsl02a"> Government </string>
    <string name="tcvsl02b"> Private </string>
    <string name="tcvsl02c"> Madarasa </string>
    <string name="tcvsl03"> Union Council </string>
    <string name="tcvsl04"> Mahulla/Area </string>
    <string name="tcvsl05"> Complete Address including Mohalla and House No </string>
    <string name="tcvsl06"> School Administration ready to give consent for Mass Immunization campaign </string>
    <string name="tcvsl07"> Name of School Administrator </string>
    <string name="tcvsl08"> Contact No </string>
    <string name="sec_clisting">SCHOOL IMMUNIZATION FORM</string>
    <string name="tcvcl01">School Name/Code</string>
    <string name="tcvcl02">Name of Child</string>
    <string name="tcvcl21">Class</string>
    <string name="tcvcl03">Date of Birth or Age</string>
    <string name="tcvcl03a">Date of Birth</string>
    <string name="tcvcl03b">Age</string>
    <string name="tcvcl05">Gender</string>
    <string name="tcvcl05a">Male</string>
    <string name="tcvcl05b">Female</string>
    <string name="tcvcl06">Father’s Name</string>
    <string name="tcvcl07">Father’s National Identity Card Number</string>
    <string name="tcvcl09">Telephone Number</string>
    <string name="tcvcl10">Alternate Telephone Number</string>
    <string name="tcvcl11">Parents ready to give consent for vaccination</string>
    <string name="tcvcl11h">If Refused or NO response skip to end</string>
    <string name="tcvcl12">Child is between 6 months – 15 years</string>
    <string name="tcvcl13">Child is NOT allergic to any medicine</string>
    <string name="tcvcl14"><![CDATA[NO active signs of infection including fever >1000F, body ache, blisters on body, malaise, vomiting, Rashes on body, Red Spots on Abdomens, seizures, Breathing Difficulty, and loose Stools for the past three days.]]></string>
    <string name="tcvcl15">Child is currently NOT using medications (Antibiotics and Steroids) for any infection or disease in the past 24 hours. (Pneumonia Acute Diarrhea, and seizures).</string>
    <string name="tcvcl16">Child is NOT immunized against Typhoid During the past 3 years (Check Vaccination card)</string>
    <string name="tcvcl17">Is the Child Present?</string>
    <string name="tcvclH1">IF ANSWER TO ALL THE ABOVE QUESTIONS IS YES, CHILD IS ELIGIBLE TO GET VACCINATED</string>
    <string name="tcvcl18">Vaccination ID:</string>
    <string name="tcvcl19">Vaccination Date</string>
    <string name="tcvcl20">Vaccination Time</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="tcvcl11a">Consent Provided</string>
    <string name="tcvcl11b">Consent Refused</string>
    <string name="tcvcl11c">No Response</string>
    <string name="absent">Absent</string>
    <string name="present">Present</string>
    <string name="CrfCase"> Case Report Form - Impact Assessment (CASE) </string>
    <string name="tcvscaah"> سیکشن :1 </string>
    <string name="tcvscaa01"> نام: </string>
    <string name="tcvscaa02"> باپ کا نام:  </string>
    <string name="tcvscaa03"> فون نمبر: </string>
    <string name="tcvscaa03a"> متبادل فون نمبر:  </string>
    <string name="tcvscaa04"> مکمل پتہ :    </string>
    <string name="tcvscaa05"> بچے کی تاریخ پیدائش/عمر </string>
    <string name="tcvscaa05a"> بچے کی تاریخ پیدائش </string>
    <string name="tcvscaa05b"> عمر </string>
    <string name="tcvscaa06"> مریض کی جنس کیا ہے؟ </string>
    <string name="tcvscaa06a"> لڑکا </string>
    <string name="tcvscaa06b"> لڑکی </string>
    <string name="tcvscaa07"> اسکرین آئی ڈی: </string>
    <string name="tcvscaa08"> اسکرین کی تاریخ: </string>
    <string name="tcvscabh"> اہلیت کی اسکریننگ </string>
    <string name="tcvscab09">کیا مریض ۷ ماہ سے ۱۵ سال کے درمیان میں ہے؟</string>
    <string name="tcvscab10"> کیا مریض کم سے کم پچھلے ۱ماہ سے لیاری میں رہتا ہے ؟ </string>
    <string name="tcvscab11"> کیا مریض 3دن یا 3دن سے زیادہ بخار کی شکایت کےساتھ مرکزصحت آیا ہے؟ </string>
    <string name="tcvscab12"> بیماری  کی تاریخ : </string>
    <string name="tcvscab13"> کیا مریض کے پاس پچھلے کلچرکی رپورٹ موجود ہے؟ </string>
    <string name="tcvscab14"> اگرہاں،تو رپورٹ کی تاریخ بتائیں </string>
    <string name="tcvscab15"> کیا مریض  کے پاس موجودکلچر کا نتیجہ سالمونیلا ٹائفی کے لیے مثبت ہے ؟ </string>
    <string name="tcvscab16"> لیباٹری رسیدنمبر: </string>
    <string name="tcvscabh17"> اگر  کلچر کا نتیجہ سالمونیلا ٹائفی کے لیے مثبت  ہوتو،مائکروبیل ریززٹینس پیٹرن بتائیں۔ </string>
    <string name="tcvscab171"> Ampicillin </string>
    <string name="tcvscab172"> Chloramphenicol </string>
    <string name="tcvscab173"> Co-trimoxazole </string>
    <string name="tcvscab174"> Fluoroquinolone </string>
    <string name="tcvscab175"> Ceftriaxone </string>
    <string name="tcvscab176"> other </string>
    <string name="tcvscab177"> Ciprofloxacin </string>
    <string name="tcvscab178"> Cefepime </string>
    <string name="tcvscab179"> Azithromycin </string>
    <string name="tcvscab1710"> Cifixime (Cefspan) </string>
    <string name="tcvscab18"> کیا  وزٹ کےدوران مریض کا خون کا نمونہ لیا  گیاہے. </string>
    <string name="tcvscab19">لیباٹری رسیدنمبر: نوٹ: اگر اس وزٹ کے دوران خون کانمونہ لیاگیاہےتولیبارٹری کی آئی ڈی درج کی جائےگی اوربقایافارم کلچرکےنتیجہ آنےکےبعد بھراجائےگا۔</string>
    <string name="tcvscab20"> کیا مریض  کے کلچر کا نتیجہ سالمونیلا ٹائفی کے لیے مثبت ہے ؟ </string>
    <string name="tcvscab20c"> نتیجہ رُکاہوا ہے </string>
    <string name="tcvscabh21"> اگر  کلچر کا نتیجہ سالمونیلا ٹائفی کے لیے مثبت  ہوتو،مائکروبیل ریززٹینس پیٹرن بتائیں۔ </string>
    <string name="tcvscab211"> Ampicillin </string>
    <string name="tcvscab212"> Chloramphenicol </string>
    <string name="tcvscab213"> Co-trimoxazole </string>
    <string name="tcvscab214"> Fluoroquinolone </string>
    <string name="tcvscab215"> Ceftriaxone </string>
    <string name="tcvscab216"> Other </string>
    <string name="tcvscab217"> Ciprofloxacin </string>
    <string name="tcvscab218"> Cefepime </string>
    <string name="tcvscab219"> Azithromycin </string>
    <string name="tcvscab2110"> Cifixime (Cefspan) </string>
    <string name="tcvscab22"> کیا مریض یا والدین  مطالعہ میں  شمو لیت کے لیے  رضا مند ہے ؟ </string>
    <string name="tcvscab2201">اگر نہیں تو وجہ بیان کریں</string>
    <string name="tcvscabh22"> اگر اوپر دیے گے سوالات (22،11،10،9اور15 یا20)کے جوابات ہاں ہیں تو مریض  مطالعہ میں شرکت کے لئے اہل ہے \n مندرجہ ذیل حصے کو بھرنا جاری رکھیں۔ </string>
    <string name="tcvscab23"> کیس آئی ڈی : </string>
    <string name="tcvscach"> سیکشن :2 </string>
    <string name="tcvscadh"> سیکشن :3 </string>
    <string name="tcvscad33"> کیس آئی ڈی : </string>
    <string name="tcvscad34"> انرولمنٹ کی تاریخ: </string>
    <string name="tcvscad01"> اس گھر میں کتنے افراد رہتے ہیں؟ </string>
    <string name="tcvscad02"> اس گھر میں کتنے کمرے ہیں؟ </string>
    <string name="tcvscad03"> گھر کس قسم کا ہے ؟ </string>
    <string name="tcvscad03a"> بنگلہ </string>
    <string name="tcvscad03b"> پکا گھر </string>
    <string name="tcvscad03c"> کچا پکا گھر </string>
    <string name="tcvscad03d"> کچا گھر </string>
    <string name="tcvscad04"> گھر میں کل کتنے ٹوائلٹ ہیں؟ </string>
    <string name="tcvscad05"> گھر میں سینیٹری (لیٹرین ) کی سہولیات کیسی ہیں؟ </string>
    <string name="tcvscad05a"> کموڈکےساتھ فلش </string>
    <string name="tcvscad05b"> عام لیٹرین </string>
    <string name="tcvscad05c"> میدان </string>
    <string name="tcvscad06"> گھر میں کوڑے کو ضائع کرنے کا طریقہ کیا ہے؟ </string>
    <string name="tcvscad06a"> سڑک پر پھیکنا </string>
    <string name="tcvscad06b"> سویپر لے جاتا ہے </string>
    <string name="tcvscad06c"> گندگی کے ڈھیر میں پھینک دیا </string>
    <string name="tcvscad06d"> کوئی اوروضاحت کریں </string>
    <string name="tcvscad07"> گھر میں سیوریج ڈسپوزل کا کیا طریقہ ہے؟ </string>
    <string name="tcvscad07a"> میونسپل پائپ لائن </string>
    <string name="tcvscad07b"> گھر کے باہر کھلی سیوریج </string>
    <string name="tcvscad07c"> سویپرلے گیا </string>
    <string name="tcvscad07d"> کوئی اوروضاحت کریں </string>
    <string name="tcvscad08"> ینے کا پانی حاصل کرنے کا ذریعہ کیا ہے؟(ایک یا ایک سے زیادہ موزوں پہ نشان لگا سکتے ہیں) </string>
    <string name="tcvscad0801"> پائپ کا پانی </string>
    <string name="tcvscad0802"> ٹینکر </string>
    <string name="tcvscad0803"> عوام کا نل </string>
    <string name="tcvscad0804"> ریڑھی کے ساتھ چھوٹی ٹنکی </string>
    <string name="tcvscad0805"> بورنگ کا پانی </string>
    <string name="tcvscad0806"> بوتل والا پانی </string>
    <string name="tcvscad09"> گھر میں پینے کے پانی کو صاف کرنے کا طریقہ؟ </string>
</resources>