<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SectionChild">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.typbar_tcv.ui.SectionChild" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout style="@style/linearlayout_view">

            <LinearLayout
                android:id="@+id/childSec"
                style="@style/linearlayout_view_wt_bound">


                <!--EditText tcvcl01-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl01" />

                        <EditText
                            android:id="@+id/tcvcl01"
                            style="@style/EditText"
                            android:hint="@string/tcvcl01" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>
                
                <!--EditText tcvcl02-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl02" />

                        <EditText
                            android:id="@+id/tcvcl02"
                            style="@style/EditText"
                            android:hint="@string/tcvcl02" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--EditText tcvcl03-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl03" />

                        <EditText
                            android:id="@+id/tcvcl03"
                            style="@style/EditText"
                            android:hint="@string/tcvcl03" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--EditText tcvcl04-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl04" />

                        <EditText
                            android:id="@+id/tcvcl04"
                            style="@style/EditText"
                            android:hint="@string/tcvcl04" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--Radio tcvcl05-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl05" />

                        <RadioGroup
                            android:id="@+id/tcvcl05"
                            style="@style/i_radiogroup">

                            <RadioButton
                                android:id="@+id/tcvcl05a"
                                style="@style/i_radiobutton"
                                android:text="@string/tcvcl05a" />

                            <RadioButton
                                android:id="@+id/tcvcl05b"
                                style="@style/i_radiobutton"
                                android:text="@string/tcvcl05b" />

                        </RadioGroup>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--EditText tcvcl06-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl06" />

                        <EditText
                            android:id="@+id/tcvcl06"
                            style="@style/EditText"
                            android:hint="@string/tcvcl06" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--EditText tcvcl07-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl07" />

                        <EditText
                            android:id="@+id/tcvcl07"
                            style="@style/EditText"
                            android:hint="@string/tcvcl07" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--EditText tcvcl08-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvsl05" />

                        <EditText
                            android:id="@+id/tcvcl08"
                            style="@style/EditText"
                            android:hint="@string/tcvsl05"
                            android:maxLines="2" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <!--EditText tcvcl09-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl09" />

                        <EditText
                            android:id="@+id/tcvcl09"
                            style="@style/EditText"
                            android:hint="@string/tcvcl09" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--EditText tcvcl10-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl10" />

                        <EditText
                            android:id="@+id/tcvcl10"
                            style="@style/EditText"
                            android:hint="@string/tcvcl10" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <!--Radio tcvcl11-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl11" />

                        <TextView
                            style="@style/h_textview"
                            android:text="@string/tcvcl11h" />

                        <RadioGroup
                            android:id="@+id/tcvcl11"
                            style="@style/i_radiogroup">

                            <RadioButton
                                android:id="@+id/tcvcl11a"
                                style="@style/i_radiobutton"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/tcvcl11b"
                                style="@style/i_radiobutton"
                                android:text="@string/no" />

                        </RadioGroup>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--Radio tcvcl12-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl12"/>

                        <RadioGroup
                            android:id="@+id/tcvcl12"
                            style="@style/i_radiogroup">

                            <RadioButton
                                android:id="@+id/tcvcl12a"
                                style="@style/i_radiobutton"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/tcvcl12b"
                                style="@style/i_radiobutton"
                                android:text="@string/no" />

                        </RadioGroup>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--Radio tcvcl13-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl13"/>

                        <RadioGroup
                            android:id="@+id/tcvcl13"
                            style="@style/i_radiogroup">

                            <RadioButton
                                android:id="@+id/tcvcl13a"
                                style="@style/i_radiobutton"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/tcvcl13b"
                                style="@style/i_radiobutton"
                                android:text="@string/no" />

                        </RadioGroup>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--Radio tcvcl14-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl14"/>

                        <RadioGroup
                            android:id="@+id/tcvcl14"
                            style="@style/i_radiogroup">

                            <RadioButton
                                android:id="@+id/tcvcl14a"
                                style="@style/i_radiobutton"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/tcvcl14b"
                                style="@style/i_radiobutton"
                                android:text="@string/no" />

                        </RadioGroup>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--Radio tcvcl15-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl15"/>

                        <RadioGroup
                            android:id="@+id/tcvcl15"
                            style="@style/i_radiogroup">

                            <RadioButton
                                android:id="@+id/tcvcl15a"
                                style="@style/i_radiobutton"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/tcvcl15b"
                                style="@style/i_radiobutton"
                                android:text="@string/no" />

                        </RadioGroup>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--Radio tcvcl16-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl16"/>

                        <RadioGroup
                            android:id="@+id/tcvcl16"
                            style="@style/i_radiogroup">

                            <RadioButton
                                android:id="@+id/tcvcl16a"
                                style="@style/i_radiobutton"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/tcvcl16b"
                                style="@style/i_radiobutton"
                                android:text="@string/no" />

                        </RadioGroup>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--Radio tcvcl17-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl17"/>

                        <RadioGroup
                            android:id="@+id/tcvcl17"
                            style="@style/i_radiogroup">

                            <RadioButton
                                android:id="@+id/tcvcl17a"
                                style="@style/i_radiobutton"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/tcvcl17b"
                                style="@style/i_radiobutton"
                                android:text="@string/no" />

                        </RadioGroup>

                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <!--EditText tcvcl18-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl18" />

                        <EditText
                            android:id="@+id/tcvcl18"
                            style="@style/EditText"
                            android:hint="@string/tcvcl18" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--EditText tcvcl19-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl19" />

                        <EditText
                            android:id="@+id/tcvcl19"
                            style="@style/EditText"
                            android:hint="@string/tcvcl19" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--EditText tcvcl20-->
                <android.support.v7.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/tcvcl20" />

                        <EditText
                            android:id="@+id/tcvcl20"
                            style="@style/EditText"
                            android:hint="@string/tcvcl20" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
            <LinearLayout
                style="@style/linearlayout_view"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    style="@style/buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_Continue"
                    style="@style/buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#1ed61e"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/start_interview"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>
